Slightly more details in about page.

--- a/about.html
+++ b/about.html
@@ -4,5 +4,6 @@ layout: default
 
 <div class="well">
     <h1>About me</h1>
-    <p>Hello, I am me.</p>
+    <p>I'm a software developer and hardware hacker. Fragments of both I sometimes hastily pop up on <a href="https://github.com/seandmccarthy">GitHub</a>.
+    <p>If you like, you can converse with me in 280 characters or less on <a href="https://twitter.com/seandmccarthy">Twitter</a>.</p>
 </div>
